eks/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "redis"
  namespace: "link-shorter"
spec:
  selector:
    matchLabels:
      app: "redis"
  replicas: 1
  template:
    metadata:
      labels:
        app: "redis"
    spec:
      containers:
      - image: redis 
        imagePullPolicy: Always
        name: "redis"
        ports:
        - containerPort: 6379
