eks/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "web"
  namespace: "link-shorter"
spec:
  selector:
    matchLabels:
      app: "web"
  replicas: 1
  template:
    metadata:
      labels:
        app: "web"
    spec:
      containers:
      - image: 181366741066.dkr.ecr.ap-southeast-1.amazonaws.com/workshop:web
        imagePullPolicy: Always
        name: "web"
        ports:
        - containerPort: 3030
