eks/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "app"
  namespace: "link-shorter"
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app: "app"
