eks/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "redis"
  namespace: "link-shorter"
spec:
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
  type: NodePort
  selector:
    app: "redis"
