eks/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "web"
  namespace: "link-shorter"
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  type: NodePort
  selector:
    app: "web"
