eks/app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "app-ingress"
  namespace: "link-shorter"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: app
spec:
  rules:
    - http:
        paths:
          - path: /api/v1/*
            backend:
              serviceName: "app"
              servicePort: 8080
          - path: /*
            backend:
              serviceName: "app"
              servicePort: 8080
