eks/link-shorter-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: link-shorter
  name: ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:181366741066:certificate/43665f36-6e9b-493c-8a7c-c2bded988842
spec:
  rules:
    - http:
        paths:
         - path: /*
           backend:
             serviceName: ssl-redirect
             servicePort: use-annotation
         - path: /api/v1/*
           backend:
             serviceName: app
             servicePort: 8080
         - path: /web
           backend:
             serviceName: web
             servicePort: 3000
         - path: /web/*
           backend:
             serviceName: web
             servicePort: 3000
         - path: /*
           backend:
             serviceName: app
             servicePort: 8080
