eks/web-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "web-ingress"
  namespace: "link-shorter"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: web
spec:
  rules:
    - http:
        paths:
          - path: /web
            backend:
              serviceName: "web"
              servicePort: 3000
          - path: /web/*
            backend:
              serviceName: "web"
              servicePort: 3000
